[gd_scene load_steps=3 format=3 uid="uid://byfscbtetjtc7"]

[ext_resource type="Script" uid="uid://bhnu0ir0dwoss" path="res://ui/BookPopup.gd" id="1_r70ej"]
[ext_resource type="Texture2D" uid="uid://c3g562digkrtp" path="res://assets/ui/book_middle.png" id="2_1v1wv"]

[node name="BookPopup" type="CanvasLayer"]
script = ExtResource("1_r70ej")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -202.0
offset_right = 384.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2

[node name="Book" type="TextureRect" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -382.0
offset_top = -158.0
offset_right = 382.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1v1wv")

[node name="ContentLeft" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 92.0
offset_right = 347.0
offset_bottom = 280.0

[node name="ContentRight" type="RichTextLabel" parent="Panel"]
offset_left = 423.0
offset_top = 90.0
offset_right = 554.0
offset_bottom = 280.0

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.957
anchor_top = 0.079
anchor_right = 0.957
anchor_bottom = 0.088
offset_left = -12.976
offset_top = -11.916
offset_right = 12.024
offset_bottom = 9.448
text = "X"

[connection signal="pressed" from="Panel/CloseButton" to="." method="hide_popup"]
